--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -28,6 +28,11 @@ jobs:
       # Runs a single command using the runners shell
       - name: Run a one-line script
         run: sh ./Hey.sh
+        
+      - name: python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.8
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
@@ -39,4 +44,5 @@ jobs:
           echo Hello world
           echo bye world
           ls
+          env
           
