--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -33,6 +33,8 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: 3.8
+      - name: lol
+        run: python Hey.py
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
